--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,9 +1,13 @@
 .app {
-    background-color: #f3f2ef;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: #f3f2ef;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .app_body {
-    display: flex;  
+  display: flex;
+  max-width: 1200px;
+  margin-top: 35px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
